# serinda

./: .gitignore  FlaskStart.py  LICENSE  MediapipeDistanceTest.py  README.md  TODO.txt  app.py  camera.py  compileC.sh  compileRust.bat  compileRust.sh  freeze.txt  hold.txt  installer.txt  main.py  readme.txt  requirements.txt  requirements2.txt  requirements3.txt  requirements_freeze_before_upgrade.txt  requirements_old.txt  requirements_original.txt  serinda.props  start.bat  startVenv.sh  startup.py  startupKex.sh  status.txt  test.bat  test.sh  transform.txt  working.txt
HOLD/: libraries.txt  requirements.txt  requirements1.txt  test.bat
SerindaV3/: main.py  readme.txt
TESTS/: medicationLookup.py  medication_barcode.py  transcribe.py
db/: serinda.db  serinda.sqbpro
installers/: debianInstalls.sh  python3Installs.sh
intents/: example.jsgf  hold.jsgf  serindaCommands.ini  serindaCommands.jsgf  serindaCommands.json  serindaCommands.yml  serindaCommands2.json
src/rust/serinda-rs/: Cargo.toml
src/rust/serinda-rs/src/: main.rs
static/: LeapMotionData.js  aruco-video.js  cerebro.js  createCerebro.js  hamburger2.css  keyboard.js  main.js  style.css  styles.css
templates/: bjsocvleapmotion.html  displaySection.html  image-template-tracker.html  index-wasm-babylonjs-leap.html  index.html  indexNew.html  inputOutputTest.html  interactiveLeap.html  javascript.html  main.html  main2.html  main3.html  mainIndex.html  mediapipeHandGesturesTest.html  menu.html  server_gestures.html  webrtc.html
tests/: camera.py  markdownDisplay.html  markdown_reader.py  (+2 more)
(+197 files in other folders)
