[package]
name = "serinda-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
cpal = "0.15"
vosk = "0.2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tts = "0.26.3"
tokio = { version = "1.40", features = ["full"] }
env_logger = "0.11"
log = "0.4.27"