[package]
name = "serinda-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
hound = "3.5"
simple_transcribe_rs = "1.0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tts = "0.26.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }